[gd_scene load_steps=5 format=3 uid="uid://caabwyk7cgkr6"]

[ext_resource type="Script" path="res://addons/midi/MidiPlayer.gd" id="1_ly566"]
[ext_resource type="Script" path="res://main/orchestra.gd" id="1_vqglb"]
[ext_resource type="PackedScene" uid="uid://vaf62dgmvie6" path="res://ui/Podium/View Podium Menu.tscn" id="2_xtn7k"]
[ext_resource type="PackedScene" uid="uid://dfunwf63xqt8e" path="res://ui/Podium/View Score Menu.tscn" id="4_tpnvw"]

[node name="orchestra" type="Node3D"]
script = ExtResource("1_vqglb")

[node name="MidiPlayer" type="Node" parent="."]
script = ExtResource("1_ly566")

[node name="VPodiumMenu" parent="." instance=ExtResource("2_xtn7k")]

[node name="ViewScoreMenu" parent="." instance=ExtResource("4_tpnvw")]
visible = false

[connection signal="transition_to_score" from="VPodiumMenu" to="." method="_on_v_podium_menu_transition_to_score"]
[connection signal="score_exit" from="ViewScoreMenu" to="." method="_on_view_score_menu_score_exit"]
